// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InsuranceForm shows correct package option labels based on location 1`] = `
<div class="h-screen w-fit flex flex-col justify-center">
  <h1 class="text-3xl font-bold self-center">Tell us about your self</h1>
  <div class="mt-10 self-center"><label for="Name" class="block">Name</label> <input type="text" name="Name" placeholder="Add text" required="required" class="rounded w-60 py-2 h-10 border-2 border-grey-200">
    <div data-test="nameError" class="text-rose-500">

    </div>
  </div>
  <div class="self-center mt-5"><label for="Age" class="block">Age</label> <input type="number" name="Age" placeholder="Age" required="required" class="rounded w-60 py-2 h-10 border-2 border-grey-200">
    <div data-test="ageError" class="text-rose-500">

    </div>
  </div>
  <div class="self-center mt-5"><label for="location" class="block">Where do you live</label> <select name="location" id="location" class="rounded w-60 h-10 border-2 border-grey-200 bg-white">
      <option value="hongkong">
        Hong Kong
      </option>
      <option value="usa">
        USA
      </option>
      <option value="australia">
        Australia
      </option>
    </select></div>
  <div class="self-center">
    <div class="self-start mt-5 w-60"><input id="standard" type="radio" value="standard"> <label for="standard">
        Standard </label></div>
    <div class="self-start mt-5 w-60"><input id="safe" type="radio" value="safe"> <label for="safe">
        Safe +(50HKD, 50%)</label></div>
    <div class="self-start mt-5 w-60"><input id="extra" type="radio" value="extra"> <label for="extra">
        Extra +(75HKD, 75%)</label></div>
  </div>
  <h1 data-test="premium" class="text-2xl font-bold self-center my-10">
    Your premium is 100HKD
  </h1>
  <div class="self-center"><button data-test="backButton" class="rounded w-24 h-10 border-2 border-grey-900 text-black mx-2">
      Back
    </button> <button data-test="nextButton" class="rounded w-24 h-10 bg-black text-white">
      Next
    </button></div>
</div>
`;

exports[`InsuranceForm shows correct package option labels based on location 2`] = `
<div class="h-screen w-fit flex flex-col justify-center">
  <h1 class="text-3xl font-bold self-center">Tell us about your self</h1>
  <div class="mt-10 self-center"><label for="Name" class="block">Name</label> <input type="text" name="Name" placeholder="Add text" required="required" class="rounded w-60 py-2 h-10 border-2 border-grey-200">
    <div data-test="nameError" class="text-rose-500">

    </div>
  </div>
  <div class="self-center mt-5"><label for="Age" class="block">Age</label> <input type="number" name="Age" placeholder="Age" required="required" class="rounded w-60 py-2 h-10 border-2 border-grey-200">
    <div data-test="ageError" class="text-rose-500">

    </div>
  </div>
  <div class="self-center mt-5"><label for="location" class="block">Where do you live</label> <select name="location" id="location" class="rounded w-60 h-10 border-2 border-grey-200 bg-white">
      <option value="hongkong">
        Hong Kong
      </option>
      <option value="usa">
        USA
      </option>
      <option value="australia">
        Australia
      </option>
    </select></div>
  <div class="self-center">
    <div class="self-start mt-5 w-60"><input id="standard" type="radio" value="standard"> <label for="standard">
        Standard </label></div>
    <div class="self-start mt-5 w-60"><input id="safe" type="radio" value="safe"> <label for="safe">
        Safe +(100USD, 50%)</label></div>
    <div class="self-start mt-5 w-60"><input id="extra" type="radio" value="extra"> <label for="extra">
        Extra +(150USD, 75%)</label></div>
  </div>
  <h1 data-test="premium" class="text-2xl font-bold self-center my-10">
    Your premium is 200USD
  </h1>
  <div class="self-center"><button data-test="backButton" class="rounded w-24 h-10 border-2 border-grey-900 text-black mx-2">
      Back
    </button> <button data-test="nextButton" class="rounded w-24 h-10 bg-black text-white">
      Next
    </button></div>
</div>
`;

exports[`InsuranceForm shows correct package option labels based on location 3`] = `
<div class="h-screen w-fit flex flex-col justify-center">
  <h1 class="text-3xl font-bold self-center">Tell us about your self</h1>
  <div class="mt-10 self-center"><label for="Name" class="block">Name</label> <input type="text" name="Name" placeholder="Add text" required="required" class="rounded w-60 py-2 h-10 border-2 border-grey-200">
    <div data-test="nameError" class="text-rose-500">

    </div>
  </div>
  <div class="self-center mt-5"><label for="Age" class="block">Age</label> <input type="number" name="Age" placeholder="Age" required="required" class="rounded w-60 py-2 h-10 border-2 border-grey-200">
    <div data-test="ageError" class="text-rose-500">

    </div>
  </div>
  <div class="self-center mt-5"><label for="location" class="block">Where do you live</label> <select name="location" id="location" class="rounded w-60 h-10 border-2 border-grey-200 bg-white">
      <option value="hongkong">
        Hong Kong
      </option>
      <option value="usa">
        USA
      </option>
      <option value="australia">
        Australia
      </option>
    </select></div>
  <div class="self-center">
    <div class="self-start mt-5 w-60"><input id="standard" type="radio" value="standard"> <label for="standard">
        Standard </label></div>
    <div class="self-start mt-5 w-60"><input id="safe" type="radio" value="safe"> <label for="safe">
        Safe +(150AUD, 50%)</label></div>
    <div class="self-start mt-5 w-60"><input id="extra" type="radio" value="extra"> <label for="extra">
        Extra +(225AUD, 75%)</label></div>
  </div>
  <h1 data-test="premium" class="text-2xl font-bold self-center my-10">
    Your premium is 300AUD
  </h1>
  <div class="self-center"><button data-test="backButton" class="rounded w-24 h-10 border-2 border-grey-900 text-black mx-2">
      Back
    </button> <button data-test="nextButton" class="rounded w-24 h-10 bg-black text-white">
      Next
    </button></div>
</div>
`;
